源码来自开源项目https://github.com/shinezejian/emotionkeyboard 我主要是解决了键盘高度变化适应问题 并且重新封装了下代码

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">EmotionKeyBoard</string>
 
     <string name="btn_send">发送</string>
+    <string name="btn_txt_send_msg">发送</string>
+    <string name="btn_edit_text">btn_main_editText</string>
+    <string name="btn_list_view">btn_main_listView</string>
 </resources>
